IBU-8118: Fixes after first test of 'lookup_kvs_v2' branch